# barcodeapp

./: .gitignore  Cargo.toml  IOS_PORT_PLAN.md  README.md  build-ios.sh  run-receiver.sh
.github/workflows/: build-ios.yml  release.yml
android/: Makefile.toml  build.gradle.kts  log  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/barcodescanner/: BackgroundSyncManager.kt  IrohBridge.kt  MainActivity.kt  ScanDetailActivity.kt  ScanEntry.kt  ScanHistoryActivity.kt  ScanHistoryManager.kt
android/app/src/main/res/layout/: activity_main.xml  activity_scan_detail.xml  activity_scan_history.xml  item_scan.xml
android/gradle/: libs.versions.toml
android/rust/: Cargo.toml
android/rust/src/: lib.rs  logcat.rs
barcode-proto/: Cargo.toml
barcode-proto/src/: lib.rs
ios/: project.yml
ios/BarcodeScanner/: BarcodeScanner-Bridging-Header.h  BarcodeScanner.entitlements  BarcodeScannerView.swift  ContentView.swift  Info.plist  IrohBridge.swift  ShopInfo.swift
ios/BarcodeScanner.xcodeproj/: project.pbxproj
ios/BarcodeScanner.xcodeproj/project.xcworkspace/xcuserdata/matthiasreif.xcuserdatad/: UserInterfaceState.xcuserstate
ios/BarcodeScanner.xcodeproj/xcshareddata/xcschemes/: BarcodeScanner.xcscheme
ios/rust/: Cargo.toml
ios/rust/src/: lib.rs
ios/rust/src/include/: barcode_scanner.h
receiver/: 99-barcode-scanner.rules  Cargo.toml
receiver/src/: main.rs
schemas/: gschemas.compiled  org.gnome.settings-daemon.plugins.xsettings.gschema.xml
shared/: build.gradle.kts
shared/src/commonMain/kotlin/com/example/barcodescanner/: BarcodeState.kt  CardExtraction.kt  ShopInfo.kt
