[package]
name = "receiver"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
barcode-proto = { path = "../barcode-proto" }
iroh = { version = "0.97", features = ["address-lookup-mdns"] }
iroh-tickets = "0.4"
dioxus = { version = "0.7", features = ["desktop"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
qrcode = "0.14"
base64 = "0.22"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opener = "0.7"
arboard = "3"
