[package]
name = "barcode-scanner-android"
version = "0.1.0"
edition = "2024"
description = "JNI bridge for the barcode scanner Android app"
publish = false

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
barcode-proto = { path = "../../barcode-proto" }
iroh = { version = "0.97", features = ["address-lookup-mdns"] }
iroh-tickets = "0.4"
jni = "0.21"
ndk-context = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
